--- a/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.check.ini
@@ -1,4 +1,3 @@
-
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -6,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,86 +14,86 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE="MySQL views are not available."
-SP.REQ.MYSQL_VIEWS_AVAILABLE="MySQL views are available."
-SP.REQ.MYSQL_FUNCTIONS_NOT_AVAILABLE="MySQL functions are not available."
-SP.REQ.MYSQL_FUNCTIONS_AVAILABLE="MySQL functions are available."
-SP.REQ.MYSQL_PROCEDURES_NOT_AVAILABLE="MySQL procedures are not available."
-SP.REQ.MYSQL_PROCEDURES_AVAILABLE="MySQL procedures are available."
-SP.REQ.MYSQL_WRONG_COLL="The required database collation has to be 'utf-8'. But the database is using 'var:[collation]' as collation."
-SP.REQ.MYSQL_COLL_OK="Using the recommended collation 'var:[collation]'."
-SP.REQ.MYSQL_WRONG_VER="The required MySQL version is var:[required] but the installed version is var:[installed]."
-SP.REQ.MYSQL_NOT_REC_VER="The recommended MySQL version is var:[recommended] but the installed version is var:[installed]."
-SP.REQ.MYSQL_VERSION_OK="MySQL version is var:[installed]."
-SP.REQ.PEAR_AVAILABLE="PEAR available."
-SP.REQ.PEAR_NOT_AVAILABLE="PEAR not available. SobiPro will work, but it would be better to have it."
-SP.REQ.MEM_LIM_IS="Memory limit is: var:[memory]."
-SP.REQ.MEM_LIM_IS_LOW="Memory limit is: var:[memory]. A bit more would be better."
-SP.REQ.MEM_LIM_IS_TOO_LOW="Memory limit is extremely low var:[memory]. SobiPro will probably not work correctly."
-SP.REQ.MAX_EXEC_IS="Maximum execution time is: var:[limit]."
-SP.REQ.MAX_EXEC_IS_LOW="Maximum execution time is set very low: var:[limit]. It can interrupt PHP execution."
-SP.REQ.EXEC_ENABLED="System program execution enabled."
-SP.REQ.EXEC_NOT_ENABLED="System program execution should be enabled."
-SP.REQ.PSPELL_AVAILABLE="PSpell functions available."
-SP.REQ.PSPELL_NOT_AVAILABLE="PSpell functions not available. SobiPro will work, but it would be better to have it."
-SP.REQ.CALENDAR_AVAILABLE="Calendar extension available."
-SP.REQ.CALENDAR_NOT_AVAILABLE="Calendar extension not available. SobiPro will work, but it would be better to have it."
-SP.REQ.REFLECTION_AVAILABLE="Reflection API available."
-SP.REQ.REFLECTION_NOT_AVAILABLE="Reflection API not available."
-SP.REQ.ZIP_AVAILABLE="Zip extension available."
-SP.REQ.ZIP_NOT_AVAILABLE="Zip extension not available."
-SP.REQ.JSON_AVAILABLE="JSON Functions available."
-SP.REQ.JSON_NOT_AVAILABLE="JSON Functions not available."
-SP.REQ.OPENSSL_AVAILABLE="OpenSSL module available."
-SP.REQ.OPENSSL_NOT_AVAILABLE="OpenSSL module not available."
-SP.REQ.SOAP_AVAILABLE="SOAP extension available."
-SP.REQ.SOAP_NOT_AVAILABLE="SOAP extension not available."
-SP.REQ.CURL_INSTALLED="Client URL Library installed."
-SP.REQ.CURL_NOT_INSTALLED="Client URL Library not installed."
-SP.REQ.REPC_AVAILABLE="Regular Expressions (Perl-Compatible) available."
-SP.REQ.REPC_NOT_AVAILABLE="Regular Expressions (Perl-Compatible) not available."
-SP.REQ.SPL_AVAILABLE="Standard PHP Library available."
-SP.REQ.SPL_NOT_AVAILABLE="Standard PHP Library not available."
-SP.REQ.DOMXPATH_AVAILABLE="DOMXPath available."
-SP.REQ.DOMXPATH_NOT_AVAILABLE="DOMXPath not available."
-SP.REQ.XSL_AVAILABLE="XSL extension available."
-SP.REQ.XSL_NOT_AVAILABLE="XSL extension not available."
-SP.REQ.DOM_AVAILABLE="Document Object Model available."
-SP.REQ.DOM_NOT_AVAILABLE="Document Object Model not available."
-SP.REQ.EXIF_AVAILABLE="Exif extension installed."
-SP.REQ.EXIF_NOT_AVAILABLE="Exif extension not available. SobiPro will work, but it would be better to have it."
-SP.REQ.GD_AVAILABLE="GD library installed."
-SP.REQ.GD_NOT_AVAILABLE="GD library should be installed."
-SP.REQ.RG_DISABLED="PHP Register Globals is disabled."
-SP.REQ.RG_ENABLED="PHP Register Globals is enabled which can cause huge security risk."
-SP.REQ.PHP_SAFE_MODE_DISABLED="PHP Safe Mode is disabled."
-SP.REQ.PHP_SAFE_MODE_ENABLED="PHP Safe Mode has to be disabled."
-SP.REQ.PHP_WRONG_VER="The required PHP version is var:[required] but the installed version is var:[installed]."
-SP.REQ.PHP_NOT_REC_VER="The recommended PHP version is var:[recommended] but the installed version is var:[installed]."
-SP.REQ.PHP_VERSION_OK="PHP version is var:[installed]."
-SP.REQ.WS_WRONG_SOFTWARE="Recommended web server software is Apache. You are using var:[webserver]."
-SP.REQ.WS_WRONG_VER="The required Apache version is var:[required] but the installed version is var:[installed]."
-SP.REQ.WS_NOT_REC_VER="The recommended Apache version is var:[recommended] but the installed version is var:[installed]."
-SP.REQ.WS_VERSION_OK="Apache version is var:[installed]. SAPI: var:[sapi]."
-SP.REQ.WS_NO_APACHE_VER="Cannot determine the Apache version. Please ensure that you are using at least Apache var:[required]."
-SP.REQ.CMS_WRONG_VER="The required version of var:[cms] is var:[required] but the installed version is var:[installed]."
-SP.REQ.CMS_NOT_REC_VER="The recommended version of var:[cms] is var:[recommended] but the installed version is var:[installed]."
-SP.REQ.CMS_VERSION_OK="Using the recommended version of var:[cms] version var:[installed]."
-SP.REQ.CMS_ENCODING_NOK="The required encoding/charset has to be 'utf-8' But this site is using var:[encoding] as encoding."
-SP.REQ.CMS_ENCODING_OK="Using the recommended encoding/charset var:[encoding]."
-SP.REQ.CMS_FTP_NOK="It is not recommended to use the FTP-Layer."
-SP.REQ.CMS_FTP_OK="FTP Layer is disabled."
-SP.REQ.TIDY_NOT_AVAILABLE="Tidy - HTML clean and repair utility is not available. SobiPro will work, but it would be helpful with template modifications."
-SP.REQ.TIDY_AVAILABLE="Tidy - HTML clean and repair utility available."
-SP.REQ.MYSQL_CACHE_NOT_AVAILABLE="MySQL Query Cache is disabled."
-SP.REQ.MYSQL_CACHE_AVAILABLE="MySQL Query Cache is enabled."
-SP.REQ.MYSQL_CACHE_CANNOT_CHECK="Cannot check if MySQL Query Cache is enabled."
-SP.REQ.PARSE_INI_NOT_AVAILABLE="Configuration Files Parser (INI-Files) is not available."
-SP.REQ.PARSE_INI_AVAILABLE="Configuration Files Parser (INI-Files) is available."
-SP.REQ.SQLITE_AVAILABLE="SQLite support is available."
-SP.REQ.SQLITE_NOT_AVAILABLE="SQLite support is not available but highly recommended."
-SP.REQ.FILTER_AVAILABLE="Filter functions are available."
-SP.REQ.FILTER_NOT_AVAILABLE="Filter functions are not available."
-SP.REQ.CURL_NOT_USABLE="CURL not usable. Some functionality will be disturbed."
+SP.REQ.MYSQL_VIEWS_NOT_AVAILABLE = "MySQL views are not available."
+SP.REQ.MYSQL_VIEWS_AVAILABLE = "MySQL views are available."
+SP.REQ.MYSQL_FUNCTIONS_NOT_AVAILABLE = "MySQL functions are not available."
+SP.REQ.MYSQL_FUNCTIONS_AVAILABLE = "MySQL functions are available."
+SP.REQ.MYSQL_PROCEDURES_NOT_AVAILABLE = "MySQL procedures are not available."
+SP.REQ.MYSQL_PROCEDURES_AVAILABLE = "MySQL procedures are available."
+SP.REQ.MYSQL_WRONG_COLL = "The required database collation has to be 'utf-8'. But the database is using 'var:[collation]' as collation."
+SP.REQ.MYSQL_COLL_OK = "Using the recommended collation 'var:[collation]'."
+SP.REQ.MYSQL_WRONG_VER = "The required MySQL version is var:[required] but the installed version is var:[installed]."
+SP.REQ.MYSQL_NOT_REC_VER = "The recommended MySQL version is var:[recommended] but the installed version is var:[installed]."
+SP.REQ.MYSQL_VERSION_OK = "MySQL version is var:[installed]."
+SP.REQ.PEAR_AVAILABLE = "PEAR available."
+SP.REQ.PEAR_NOT_AVAILABLE = "PEAR not available. SobiPro will work, but it would be better to have it."
+SP.REQ.MEM_LIM_IS = "Memory limit is: var:[memory]."
+SP.REQ.MEM_LIM_IS_LOW = "Memory limit is: var:[memory]. A bit more would be better."
+SP.REQ.MEM_LIM_IS_TOO_LOW = "Memory limit is extremely low var:[memory]. SobiPro will probably not work correctly."
+SP.REQ.MAX_EXEC_IS = "Maximum execution time is: var:[limit]."
+SP.REQ.MAX_EXEC_IS_LOW = "Maximum execution time is set very low: var:[limit]. It can interrupt PHP execution."
+SP.REQ.EXEC_ENABLED = "System program execution enabled."
+SP.REQ.EXEC_NOT_ENABLED = "System program execution should be enabled."
+SP.REQ.PSPELL_AVAILABLE = "PSpell functions available."
+SP.REQ.PSPELL_NOT_AVAILABLE = "PSpell functions not available. SobiPro will work, but it would be better to have it."
+SP.REQ.CALENDAR_AVAILABLE = "Calendar extension available."
+SP.REQ.CALENDAR_NOT_AVAILABLE = "Calendar extension not available. SobiPro will work, but it would be better to have it."
+SP.REQ.REFLECTION_AVAILABLE = "Reflection API available."
+SP.REQ.REFLECTION_NOT_AVAILABLE = "Reflection API not available."
+SP.REQ.ZIP_AVAILABLE = "Zip extension available."
+SP.REQ.ZIP_NOT_AVAILABLE = "Zip extension not available."
+SP.REQ.JSON_AVAILABLE = "JSON Functions available."
+SP.REQ.JSON_NOT_AVAILABLE = "JSON Functions not available."
+SP.REQ.OPENSSL_AVAILABLE = "OpenSSL module available."
+SP.REQ.OPENSSL_NOT_AVAILABLE = "OpenSSL module not available."
+SP.REQ.SOAP_AVAILABLE = "SOAP extension available."
+SP.REQ.SOAP_NOT_AVAILABLE = "SOAP extension not available."
+SP.REQ.CURL_INSTALLED = "Client URL Library installed."
+SP.REQ.CURL_NOT_INSTALLED = "Client URL Library not installed."
+SP.REQ.REPC_AVAILABLE = "Regular Expressions (Perl-Compatible) available."
+SP.REQ.REPC_NOT_AVAILABLE = "Regular Expressions (Perl-Compatible) not available."
+SP.REQ.SPL_AVAILABLE = "Standard PHP Library available."
+SP.REQ.SPL_NOT_AVAILABLE = "Standard PHP Library not available."
+SP.REQ.DOMXPATH_AVAILABLE = "DOMXPath available."
+SP.REQ.DOMXPATH_NOT_AVAILABLE = "DOMXPath not available."
+SP.REQ.XSL_AVAILABLE = "XSL extension available."
+SP.REQ.XSL_NOT_AVAILABLE = "XSL extension not available."
+SP.REQ.DOM_AVAILABLE = "Document Object Model available."
+SP.REQ.DOM_NOT_AVAILABLE = "Document Object Model not available."
+SP.REQ.EXIF_AVAILABLE = "Exif extension installed."
+SP.REQ.EXIF_NOT_AVAILABLE = "Exif extension not available. SobiPro will work, but it would be better to have it."
+SP.REQ.GD_AVAILABLE = "GD library installed."
+SP.REQ.GD_NOT_AVAILABLE = "GD library should be installed."
+SP.REQ.RG_DISABLED = "PHP Register Globals is disabled."
+SP.REQ.RG_ENABLED = "PHP Register Globals is enabled which can cause huge security risk."
+SP.REQ.PHP_SAFE_MODE_DISABLED = "PHP Safe Mode is disabled."
+SP.REQ.PHP_SAFE_MODE_ENABLED = "PHP Safe Mode has to be disabled."
+SP.REQ.PHP_WRONG_VER = "The required PHP version is var:[required] but the installed version is var:[installed]."
+SP.REQ.PHP_NOT_REC_VER = "The recommended PHP version is var:[recommended] but the installed version is var:[installed]."
+SP.REQ.PHP_VERSION_OK = "PHP version is var:[installed]."
+SP.REQ.WS_WRONG_SOFTWARE = "Recommended web server software is Apache. You are using var:[webserver]."
+SP.REQ.WS_WRONG_VER = "The required Apache version is var:[required] but the installed version is var:[installed]."
+SP.REQ.WS_NOT_REC_VER = "The recommended Apache version is var:[recommended] but the installed version is var:[installed]."
+SP.REQ.WS_VERSION_OK = "Apache version is var:[installed]. SAPI: var:[sapi]."
+SP.REQ.WS_NO_APACHE_VER = "Cannot determine the Apache version. Please ensure that you are using at least Apache var:[required]."
+SP.REQ.CMS_WRONG_VER = "The required version of var:[cms] is var:[required] but the installed version is var:[installed]."
+SP.REQ.CMS_NOT_REC_VER = "The recommended version of var:[cms] is var:[recommended] but the installed version is var:[installed]."
+SP.REQ.CMS_VERSION_OK = "Using the recommended version of var:[cms] version var:[installed]."
+SP.REQ.CMS_ENCODING_NOK = "The required encoding/charset has to be 'utf-8' But this site is using var:[encoding] as encoding."
+SP.REQ.CMS_ENCODING_OK = "Using the recommended encoding/charset var:[encoding]."
+SP.REQ.CMS_FTP_NOK = "It is not recommended to use the FTP-Layer."
+SP.REQ.CMS_FTP_OK = "FTP Layer is disabled."
+SP.REQ.TIDY_NOT_AVAILABLE = "Tidy - HTML clean and repair utility is not available. SobiPro will work, but it would be helpful with template modifications."
+SP.REQ.TIDY_AVAILABLE = "Tidy - HTML clean and repair utility available."
+SP.REQ.MYSQL_CACHE_NOT_AVAILABLE = "MySQL Query Cache is disabled."
+SP.REQ.MYSQL_CACHE_AVAILABLE = "MySQL Query Cache is enabled."
+SP.REQ.MYSQL_CACHE_CANNOT_CHECK = "Cannot check if MySQL Query Cache is enabled."
+SP.REQ.PARSE_INI_NOT_AVAILABLE = "Configuration Files Parser (INI-Files) is not available."
+SP.REQ.PARSE_INI_AVAILABLE = "Configuration Files Parser (INI-Files) is available."
+SP.REQ.SQLITE_AVAILABLE = "SQLite support is available."
+SP.REQ.SQLITE_NOT_AVAILABLE = "SQLite support is not available but highly recommended."
+SP.REQ.FILTER_AVAILABLE = "Filter functions are available."
+SP.REQ.FILTER_NOT_AVAILABLE = "Filter functions are not available."
+SP.REQ.CURL_NOT_USABLE = "CURL not usable. Some functionality will be disturbed."
