--- a/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -5,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,23 +14,23 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.WARNING.NO_NAME_FIELD_SELECTED="<strong>Warning</strong>: Please select a name field for this section!"
-SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<strong>Warning</strong>: Some entries are missing base data. Please check the configuration."
-SP.WARNING.EX.MSG_UPDATE_FIRST="The list of available applications is not available. Click on the 'Fetch Updates' button to get the list."
-SP.ACCELERATOR_ENABLED="SobiPro Data Accelerator is enabled."
-SP.ACCELERATOR_DISABLED="SobiPro Data Accelerator is disabled."
-SP.XML_CACHE_ENABLED="XML Cache is enabled."
-SP.XML_CACHE_DISABLED="XML Cache is disabled."
-SP.JS_CACHE_ENABLED="JavaScript Cache is enabled."
-SP.JS_CACHE_DISABLED="JavaScript Cache is disabled."
-SP.CSS_CACHE_ENABLED="CSS Cache is enabled."
-SP.CSS_CACHE_DISABLED="CSS Cache is disabled."
-SP.DISPLAY_ERRORS_ENABLED="Displaying errors is enabled."
-SP.DISPLAY_ERRORS_DISABLED="Displaying errors is disabled."
-SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site."
-SP.DEBUG_LEVEL_OK="Debug level is correct."
-SP.DEBUG_XML_ENABLED="XML output is enabled."
-SP.DEBUG_XML_DISABLED="XML output is disabled."
-SP.WARNING.COMPAT_MODE_WARNING="This application is working in legacy mode, therefore the functionality and especially the layout is not fully compatible. Sorry for this inconvenience."
+SP.WARNING.NO_NAME_FIELD_SELECTED = "<strong>Warning</strong>: Please select a name field for this section!"
+SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE = "<strong>Warning</strong>: Some entries are missing base data. Please check the configuration."
+SP.WARNING.EX.MSG_UPDATE_FIRST = "The list of available applications is not available. Click on the 'Fetch Updates' button to get the list."
+SP.ACCELERATOR_ENABLED = "SobiPro Data Accelerator is enabled."
+SP.ACCELERATOR_DISABLED = "SobiPro Data Accelerator is disabled."
+SP.XML_CACHE_ENABLED = "XML Cache is enabled."
+SP.XML_CACHE_DISABLED = "XML Cache is disabled."
+SP.JS_CACHE_ENABLED = "JavaScript Cache is enabled."
+SP.JS_CACHE_DISABLED = "JavaScript Cache is disabled."
+SP.CSS_CACHE_ENABLED = "CSS Cache is enabled."
+SP.CSS_CACHE_DISABLED = "CSS Cache is disabled."
+SP.DISPLAY_ERRORS_ENABLED = "Displaying errors is enabled."
+SP.DISPLAY_ERRORS_DISABLED = "Displaying errors is disabled."
+SP.DEBUG_LEVEL_TOO_HIGH = "Debug level is too high for a live site."
+SP.DEBUG_LEVEL_OK = "Debug level is correct."
+SP.DEBUG_XML_ENABLED = "XML output is enabled."
+SP.DEBUG_XML_DISABLED = "XML output is disabled."
+SP.WARNING.COMPAT_MODE_WARNING = "This application is working in legacy mode, therefore the functionality and especially the layout is not fully compatible. Sorry for this inconvenience."
