--- a/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -5,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,88 +14,88 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.MENU_LINK_CONTINUE="Click on the 'Save Selection' button to continue."
+SP.MENU_LINK_CONTINUE = "Click on the 'Save Selection' button to continue."
 
-SP.MANAGE_APPS="Manage Applications"
-SP.MANAGE_APPS_DESC="Install, remove and change state of Applications and Templates"
+SP.MANAGE_APPS = "Manage Applications"
+SP.MANAGE_APPS_DESC = "Install, remove and change state of Applications and Templates"
 
-SP.SOBI_SELECT_FUNCTIONALITY="Select Functionality"
+SP.SOBI_SELECT_FUNCTIONALITY = "Select Functionality"
 
-SP.MENU_LINK_TO_CATEGORY="Link to category"
-SP.MENU_LINK_TO_SELECTED_CATEGORY="Link to category '%s'"
+SP.MENU_LINK_TO_CATEGORY = "Link to category"
+SP.MENU_LINK_TO_SELECTED_CATEGORY = "Link to category '%s'"
 
-SP.MENU_LINK_TO_ENTRY="Link to entry"
-SP.MENU_LINK_TO_SELECTED_ENTRY="Link to entry '%s'"
-SP.MENU_LINK_TO_ENTRY_EXPL="Create a link to a specific entry in the chosen section."
-SP.MENU_LINK_TO_ENTRY_MISSING="Please select an entry first!"
+SP.MENU_LINK_TO_ENTRY = "Link to entry"
+SP.MENU_LINK_TO_SELECTED_ENTRY = "Link to entry '%s'"
+SP.MENU_LINK_TO_ENTRY_EXPL = "Create a link to a specific entry in the chosen section."
+SP.MENU_LINK_TO_ENTRY_MISSING = "Please select an entry first!"
 
-SP.SOBI_SELECT_ENTRY_TYPE="Type something..."
-SP.SOBI_SELECT_ENTRY_TYPE_TITLE="Entry name"
+SP.SOBI_SELECT_ENTRY_TYPE = "Type something..."
+SP.SOBI_SELECT_ENTRY_TYPE_TITLE = "Entry name"
 
-SP.SOBI_SELECT_ENTRY="Select Entry"
-SP.SOBI_SELECT_ENTRY_EXPL="Select an entry."
+SP.SOBI_SELECT_ENTRY = "Select Entry"
+SP.SOBI_SELECT_ENTRY_EXPL = "Select an entry."
 
-SP.MENU_LINK_TO_ADD_ENTRY_FORM="Link to entry form"
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT="Select Parent Category or Section"
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL="Select a parent category or section, which should be pre-selected in the entry (add/edit entry) form."
-SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED="Link to entry form with category '%s' preselected"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM = "Link to entry form"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT = "Select Parent Category or Section"
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECT_PARENT_EXPL = "Select a parent category or section, which should be pre-selected in the entry (add/edit entry) form."
+SP.MENU_LINK_TO_ADD_ENTRY_FORM_SELECTED = "Link to entry form with category '%s' preselected"
 
-SP.MENU_LINK_TO_SEARCH_FUNCTION="Link to search form"
-SP.MENU_LINK_TO_SEARCH_FUNCTION_SELECTED="Create a link to the search form of SobiPro."
+SP.MENU_LINK_TO_SEARCH_FUNCTION = "Link to search form"
+SP.MENU_LINK_TO_SEARCH_FUNCTION_SELECTED = "Create a link to the search form of SobiPro."
 
-SP.SOBI_USER_LISTING="Link to user listings"
-SP.SOBI_USER_LISTING_EXPL="Create a link to a listing, which displays all entries of the logged in user."
+SP.SOBI_USER_LISTING = "Link to user listings"
+SP.SOBI_USER_LISTING_EXPL = "Create a link to a listing, which displays all entries of the logged in user."
 
-SP.MENU_LINK_TO_SECTION="Link to section"
-SP.MENU_LINK_TO_SECTION_SELECTED="This will be a link to the section's main page. You need at least one link to each section main page. Do not select a template override for the first link to a section's main page!"
+SP.MENU_LINK_TO_SECTION = "Link to section"
+SP.MENU_LINK_TO_SECTION_SELECTED = "This will be a link to the section's main page. You need at least one link to each section main page. Do not select a template override for the first link to a section's main page!"
 
-SP.SOBI_DATE_LISTING="Link to listing by date"
-SP.SOBI_DATE_LISTING_EXPL="Create a link to a listing, which displays entries created within a certain time period. You need to select at least a year. You can limit the entries of that year by a month and a specific day."
-SP.SOBI_DATE_LISTING_YEAR="Select year"
-SP.SOBI_DATE_LISTING_MONTH="Select month"
-SP.SOBI_DATE_LISTING_DAY="Select day"
-SP.SOBI_DATE_LISTING_MISSING="Please select at least a year!"
+SP.SOBI_DATE_LISTING = "Link to listing by date"
+SP.SOBI_DATE_LISTING_EXPL = "Create a link to a listing, which displays entries created within a certain time period. You need to select at least a year. You can limit the entries of that year by a month and a specific day."
+SP.SOBI_DATE_LISTING_YEAR = "Select year"
+SP.SOBI_DATE_LISTING_MONTH = "Select month"
+SP.SOBI_DATE_LISTING_DAY = "Select day"
+SP.SOBI_DATE_LISTING_MISSING = "Please select at least a year!"
 
-SP.SOBI_NATIVE_TASKS="SobiPro Functionality"
-SP.SOBI_NATIVE_TASKS_EXPL="Create a menu item to SobiPro"
+SP.SOBI_NATIVE_TASKS = "SobiPro Functionality"
+SP.SOBI_NATIVE_TASKS_EXPL = "Create a menu item to SobiPro"
 
-SOBIPRO="SobiPro"
-COM_SOBIPRO="SobiPro"
-COM_SOBIPRO_CONFIGURATION="SobiPro - ACL"
+SOBIPRO = "SobiPro"
+COM_SOBIPRO = "SobiPro"
+COM_SOBIPRO_CONFIGURATION = "SobiPro - ACL"
 
-SP.SOBI_SECTION="Section, Category or Entry"
-SP.SOBI_SECTION_EXPL="Displays a section, category or entry."
-SP.SOBI_SEARCH="Search"
-SP.SOBI_SEARCH_EXPL="Displays the search form of a selected section."
-SP.SOBI_ADD_FORM="Entry Input"
-SP.SOBI_ADD_FORM_EXPL="Displays the entry input form of a selected section."
+SP.SOBI_SECTION = "Section, Category or Entry"
+SP.SOBI_SECTION_EXPL = "Displays a section, category or entry."
+SP.SOBI_SEARCH = "Search"
+SP.SOBI_SEARCH_EXPL = "Displays the search form of a selected section."
+SP.SOBI_ADD_FORM = "Entry Input"
+SP.SOBI_ADD_FORM_EXPL = "Displays the entry input form of a selected section."
 
-SP.SOBI_SELECT_SECTION="Select Section"
-SOBI_SELECT_SECTION="Select Section"
-SP.SOBI_SELECT_SECTION_EXPL="Select the target section you want to point to."
-SP.SOBI_SELECT_CATEGORY="Select Category"
-SP.SOBI_SELECT_CATEGORY_EXPL="Optionally select a category within the target section."
+SP.SOBI_SELECT_SECTION = "Select Section"
+SOBI_SELECT_SECTION = "Select Section"
+SP.SOBI_SELECT_SECTION_EXPL = "Select the target section you want to point to."
+SP.SOBI_SELECT_CATEGORY = "Select Category"
+SP.SOBI_SELECT_CATEGORY_EXPL = "Optionally select a category within the target section."
 
-SP.SOBI_SELECT_DATE="Select Date"
-SP.SOBI_SELECTED_OBJECT="Selected"
-SP.SOBI_TPL_OVERRIDE="Template override"
-SP.SOBI_TPL_OVERRIDE_OPTIONAL="Optional"
-SP.SOBI_TPL_OVERRIDE_EXPL="Select a different template for that view. If you don't select a template, the default one is used (recommended)."
-SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
+SP.SOBI_SELECT_DATE = "Select Date"
+SP.SOBI_SELECTED_OBJECT = "Selected"
+SP.SOBI_TPL_OVERRIDE = "Template override"
+SP.SOBI_TPL_OVERRIDE_OPTIONAL = "Optional"
+SP.SOBI_TPL_OVERRIDE_EXPL = "Select a different template for that view. If you don't select a template, the default one is used (recommended)."
+SP.SELECT_TEMPLATE_OVERRIDE = "Select Template"
 
-SP.SOBI_MENU_CLEAR="Clear"
-SP.SOBI_CLOSE_WINDOW="Close"
-SP.SOBI.JMENU_SAVE="Save Selection"
+SP.SOBI_MENU_CLEAR = "Clear"
+SP.SOBI_CLOSE_WINDOW = "Close"
+SP.SOBI.JMENU_SAVE = "Save Selection"
 
-SP.OTYPE_ENTRY="Entry"
-SP.OTYPE_CATEGORY="Category"
-SP.OTYPE_SECTION="Section"
+SP.OTYPE_ENTRY = "Entry"
+SP.OTYPE_CATEGORY = "Category"
+SP.OTYPE_SECTION = "Section"
 
-SP.TASK_SEARCH="Search"
-SP.TASK_ENTRY.ADD="Add New"
-SP.TASK_LIST.USER="User Listings"
-SP.TASK_LIST.DATE="Listing by Date"
+SP.TASK_SEARCH = "Search"
+SP.TASK_ENTRY.ADD = "Add New"
+SP.TASK_LIST.USER = "User Listings"
+SP.TASK_LIST.DATE = "Listing by Date"
 
 ;JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section"
