--- a/Site/usr/locale/site/en-GB.SpApp.select-list.countries.ini
+++ b/Site/usr/locale/site/en-GB.SpApp.select-list.countries.ini
@@ -1,4 +1,3 @@
-
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -6,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,206 +14,206 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.COUNTRIES.COUNTRY="Country"
-SP.COUNTRIES.AFRICA="Africa"
-SP.COUNTRIES.ALGERIA="Algeria"
-SP.COUNTRIES.ANGOLA="Angola"
-SP.COUNTRIES.BENIN="Benin"
-SP.COUNTRIES.BOTSWANA="Botswana"
-SP.COUNTRIES.BURKINA="Burkina"
-SP.COUNTRIES.BURUNDI="Burundi"
-SP.COUNTRIES.CAMEROON="Cameroon"
-SP.COUNTRIES.CAPE-VERDE="Cape Verde"
-SP.COUNTRIES.CENTRAL-AFRICAN-REPUBLIC="Central African Republic"
-SP.COUNTRIES.CHAD="Chad"
-SP.COUNTRIES.COMOROS="Comoros"
-SP.COUNTRIES.CONGO="Congo"
-SP.COUNTRIES.CONGO-DEMOCRATIC-REPUBLIC-OF="Congo, Democratic Republic of"
-SP.COUNTRIES.DJIBOUTI="Djibouti"
-SP.COUNTRIES.EGYPT="Egypt"
-SP.COUNTRIES.EQUATORIAL-GUINEA="Equatorial Guinea"
-SP.COUNTRIES.ERITREA="Eritrea"
-SP.COUNTRIES.ETHIOPIA="Ethiopia"
-SP.COUNTRIES.GABON="Gabon"
-SP.COUNTRIES.GAMBIA="Gambia"
-SP.COUNTRIES.GHANA="Ghana"
-SP.COUNTRIES.GUINEA="Guinea"
-SP.COUNTRIES.GUINEA-BISSAU="Guinea-Bissau"
-SP.COUNTRIES.IVORY-COAST="Ivory Coast"
-SP.COUNTRIES.KENYA="Kenya"
-SP.COUNTRIES.LESOTHO="Lesotho"
-SP.COUNTRIES.LIBERIA="Liberia"
-SP.COUNTRIES.LIBYA="Libya"
-SP.COUNTRIES.MADAGASCAR="Madagascar"
-SP.COUNTRIES.MALAWI="Malawi"
-SP.COUNTRIES.MALI="Mali"
-SP.COUNTRIES.MAURITANIA="Mauritania"
-SP.COUNTRIES.MAURITIUS="Mauritius"
-SP.COUNTRIES.MOROCCO="Morocco"
-SP.COUNTRIES.MOZAMBIQUE="Mozambique"
-SP.COUNTRIES.NAMIBIA="Namibia"
-SP.COUNTRIES.NIGER="Niger"
-SP.COUNTRIES.NIGERIA="Nigeria"
-SP.COUNTRIES.RWANDA="Rwanda"
-SP.COUNTRIES.SAO-TOME-AND-PRINCIPE="Sao Tome and Principe"
-SP.COUNTRIES.SENEGAL="Senegal"
-SP.COUNTRIES.SEYCHELLES="Seychelles"
-SP.COUNTRIES.SIERRA-LEONE="Sierra Leone"
-SP.COUNTRIES.SOMALIA="Somalia"
-SP.COUNTRIES.SOUTH-AFRICA="South Africa"
-SP.COUNTRIES.SOUTH-SUDAN="South Sudan"
-SP.COUNTRIES.SUDAN="Sudan"
-SP.COUNTRIES.SWAZILAND="Swaziland"
-SP.COUNTRIES.TANZANIA="Tanzania"
-SP.COUNTRIES.TOGO="Togo"
-SP.COUNTRIES.TUNISIA="Tunisia"
-SP.COUNTRIES.UGANDA="Uganda"
-SP.COUNTRIES.ZAMBIA="Zambia"
-SP.COUNTRIES.ZIMBABWE="Zimbabwe"
-SP.COUNTRIES.ASIA="Asia"
-SP.COUNTRIES.AFGHANISTAN="Afghanistan"
-SP.COUNTRIES.BAHRAIN="Bahrain"
-SP.COUNTRIES.BANGLADESH="Bangladesh"
-SP.COUNTRIES.BHUTAN="Bhutan"
-SP.COUNTRIES.BRUNEI="Brunei"
-SP.COUNTRIES.BURMA="Burma (Myanmar)"
-SP.COUNTRIES.CAMBODIA="Cambodia"
-SP.COUNTRIES.CHINA="China"
-SP.COUNTRIES.EAST-TIMOR="East Timor"
-SP.COUNTRIES.INDIA="India"
-SP.COUNTRIES.INDONESIA="Indonesia"
-SP.COUNTRIES.IRAN="Iran"
-SP.COUNTRIES.IRAQ="Iraq"
-SP.COUNTRIES.ISRAEL="Israel"
-SP.COUNTRIES.JAPAN="Japan"
-SP.COUNTRIES.JORDAN="Jordan"
-SP.COUNTRIES.KAZAKHSTAN="Kazakhstan"
-SP.COUNTRIES.KOREA-NORTH="Korea, North"
-SP.COUNTRIES.KOREA-SOUTH="Korea, South"
-SP.COUNTRIES.KUWAIT="Kuwait"
-SP.COUNTRIES.KYRGYZSTAN="Kyrgyzstan"
-SP.COUNTRIES.LAOS="Laos"
-SP.COUNTRIES.LEBANON="Lebanon"
-SP.COUNTRIES.MALAYSIA="Malaysia"
-SP.COUNTRIES.MALDIVES="Maldives"
-SP.COUNTRIES.MONGOLIA="Mongolia"
-SP.COUNTRIES.NEPAL="Nepal"
-SP.COUNTRIES.OMAN="Oman"
-SP.COUNTRIES.PAKISTAN="Pakistan"
-SP.COUNTRIES.PHILIPPINES="Philippines"
-SP.COUNTRIES.QATAR="Qatar"
-SP.COUNTRIES.RUSSIAN-FEDERATION="Russian Federation"
-SP.COUNTRIES.SAUDI-ARABIA="Saudi Arabia"
-SP.COUNTRIES.SINGAPORE="Singapore"
-SP.COUNTRIES.SRI-LANKA="Sri Lanka"
-SP.COUNTRIES.SYRIA="Syria"
-SP.COUNTRIES.TAJIKISTAN="Tajikistan"
-SP.COUNTRIES.THAILAND="Thailand"
-SP.COUNTRIES.TURKEY="Turkey"
-SP.COUNTRIES.TURKMENISTAN="Turkmenistan"
-SP.COUNTRIES.UNITED-ARAB-EMIRATES="United Arab Emirates"
-SP.COUNTRIES.UZBEKISTAN="Uzbekistan"
-SP.COUNTRIES.VIETNAM="Vietnam"
-SP.COUNTRIES.YEMEN="Yemen"
-SP.COUNTRIES.EUROPE="Europe"
-SP.COUNTRIES.ALBANIA="Albania"
-SP.COUNTRIES.ANDORRA="Andorra"
-SP.COUNTRIES.ARMENIA="Armenia"
-SP.COUNTRIES.AUSTRIA="Austria"
-SP.COUNTRIES.AZERBAIJAN="Azerbaijan"
-SP.COUNTRIES.BELARUS="Belarus"
-SP.COUNTRIES.BELGIUM="Belgium"
-SP.COUNTRIES.BOSNIA-AND-HERZEGOVINA="Bosnia and Herzegovina"
-SP.COUNTRIES.BULGARIA="Bulgaria"
-SP.COUNTRIES.CROATIA="Croatia"
-SP.COUNTRIES.CYPRUS="Cyprus"
-SP.COUNTRIES.CZECH-REPUBLIC="Czech Republic"
-SP.COUNTRIES.DENMARK="Denmark"
-SP.COUNTRIES.ESTONIA="Estonia"
-SP.COUNTRIES.FINLAND="Finland"
-SP.COUNTRIES.FRANCE="France"
-SP.COUNTRIES.GEORGIA="Georgia"
-SP.COUNTRIES.GERMANY="Germany"
-SP.COUNTRIES.GREECE="Greece"
-SP.COUNTRIES.HUNGARY="Hungary"
-SP.COUNTRIES.ICELAND="Iceland"
-SP.COUNTRIES.IRELAND="Ireland"
-SP.COUNTRIES.ITALY="Italy"
-SP.COUNTRIES.LATVIA="Latvia"
-SP.COUNTRIES.LIECHTENSTEIN="Liechtenstein"
-SP.COUNTRIES.LITHUANIA="Lithuania"
-SP.COUNTRIES.LUXEMBOURG="Luxembourg"
-SP.COUNTRIES.MACEDONIA="Macedonia"
-SP.COUNTRIES.MALTA="Malta"
-SP.COUNTRIES.MOLDOVA="Moldova"
-SP.COUNTRIES.MONACO="Monaco"
-SP.COUNTRIES.MONTENEGRO="Montenegro"
-SP.COUNTRIES.NETHERLANDS="Netherlands"
-SP.COUNTRIES.NORWAY="Norway"
-SP.COUNTRIES.POLAND="Poland"
-SP.COUNTRIES.PORTUGAL="Portugal"
-SP.COUNTRIES.ROMANIA="Romania"
-SP.COUNTRIES.SAN-MARINO="San Marino"
-SP.COUNTRIES.SERBIA="Serbia"
-SP.COUNTRIES.SLOVAKIA="Slovakia"
-SP.COUNTRIES.SLOVENIA="Slovenia"
-SP.COUNTRIES.SPAIN="Spain"
-SP.COUNTRIES.SWEDEN="Sweden"
-SP.COUNTRIES.SWITZERLAND="Switzerland"
-SP.COUNTRIES.UKRAINE="Ukraine"
-SP.COUNTRIES.UNITED-KINGDOM="United Kingdom"
-SP.COUNTRIES.VATICAN-CITY="Vatican City"
-SP.COUNTRIES.NORTH-AMERICA="North America"
-SP.COUNTRIES.ANTIGUA-AND-BARBUDA="Antigua and Barbuda"
-SP.COUNTRIES.BAHAMAS="Bahamas"
-SP.COUNTRIES.BARBADOS="Barbados"
-SP.COUNTRIES.BELIZE="Belize"
-SP.COUNTRIES.CANADA="Canada"
-SP.COUNTRIES.COSTA-RICA="Costa Rica"
-SP.COUNTRIES.CUBA="Cuba"
-SP.COUNTRIES.DOMINICA="Dominica"
-SP.COUNTRIES.DOMINICAN-REPUBLIC="Dominican Republic"
-SP.COUNTRIES.EL-SALVADOR="El Salvador"
-SP.COUNTRIES.GRENADA="Grenada"
-SP.COUNTRIES.GUATEMALA="Guatemala"
-SP.COUNTRIES.HAITI="Haiti"
-SP.COUNTRIES.HONDURAS="Honduras"
-SP.COUNTRIES.JAMAICA="Jamaica"
-SP.COUNTRIES.MEXICO="Mexico"
-SP.COUNTRIES.NICARAGUA="Nicaragua"
-SP.COUNTRIES.PANAMA="Panama"
-SP.COUNTRIES.SAINT-KITTS-AND-NEVIS="Saint Kitts and Nevis"
-SP.COUNTRIES.SAINT-LUCIA="Saint Lucia"
-SP.COUNTRIES.SAINT-VINCENT-AND-THE-GRENADINES="Saint Vincent and the Grenadines"
-SP.COUNTRIES.TRINIDAD-AND-TOBAGO="Trinidad and Tobago"
-SP.COUNTRIES.UNITED-STATES="United States"
-SP.COUNTRIES.OCEANIA="Oceania"
-SP.COUNTRIES.AUSTRALIA="Australia"
-SP.COUNTRIES.FIJI="Fiji"
-SP.COUNTRIES.KIRIBATI="Kiribati"
-SP.COUNTRIES.MARSHALL-ISLANDS="Marshall Islands"
-SP.COUNTRIES.MICRONESIA="Micronesia"
-SP.COUNTRIES.NAURU="Nauru"
-SP.COUNTRIES.NEW-ZEALAND="New Zealand"
-SP.COUNTRIES.PALAU="Palau"
-SP.COUNTRIES.PAPUA-NEW-GUINEA="Papua New Guinea"
-SP.COUNTRIES.SAMOA="Samoa"
-SP.COUNTRIES.SOLOMON-ISLANDS="Solomon Islands"
-SP.COUNTRIES.TONGA="Tonga"
-SP.COUNTRIES.TUVALU="Tuvalu"
-SP.COUNTRIES.VANUATU="Vanuatu"
-SP.COUNTRIES.SOUTH-AMERICA="South America"
-SP.COUNTRIES.ARGENTINA="Argentina"
-SP.COUNTRIES.BOLIVIA="Bolivia"
-SP.COUNTRIES.BRAZIL="Brazil"
-SP.COUNTRIES.CHILE="Chile"
-SP.COUNTRIES.COLOMBIA="Colombia"
-SP.COUNTRIES.ECUADOR="Ecuador"
-SP.COUNTRIES.GUYANA="Guyana"
-SP.COUNTRIES.PARAGUAY="Paraguay"
-SP.COUNTRIES.PERU="Peru"
-SP.COUNTRIES.SURINAME="Suriname"
-SP.COUNTRIES.URUGUAY="Uruguay"
-SP.COUNTRIES.VENEZUELA="Venezuela"
+SP.COUNTRIES.COUNTRY = "Country"
+SP.COUNTRIES.AFRICA = "Africa"
+SP.COUNTRIES.ALGERIA = "Algeria"
+SP.COUNTRIES.ANGOLA = "Angola"
+SP.COUNTRIES.BENIN = "Benin"
+SP.COUNTRIES.BOTSWANA = "Botswana"
+SP.COUNTRIES.BURKINA = "Burkina"
+SP.COUNTRIES.BURUNDI = "Burundi"
+SP.COUNTRIES.CAMEROON = "Cameroon"
+SP.COUNTRIES.CAPE-VERDE = "Cape Verde"
+SP.COUNTRIES.CENTRAL-AFRICAN-REPUBLIC = "Central African Republic"
+SP.COUNTRIES.CHAD = "Chad"
+SP.COUNTRIES.COMOROS = "Comoros"
+SP.COUNTRIES.CONGO = "Congo"
+SP.COUNTRIES.CONGO-DEMOCRATIC-REPUBLIC-OF = "Congo, Democratic Republic of"
+SP.COUNTRIES.DJIBOUTI = "Djibouti"
+SP.COUNTRIES.EGYPT = "Egypt"
+SP.COUNTRIES.EQUATORIAL-GUINEA = "Equatorial Guinea"
+SP.COUNTRIES.ERITREA = "Eritrea"
+SP.COUNTRIES.ETHIOPIA = "Ethiopia"
+SP.COUNTRIES.GABON = "Gabon"
+SP.COUNTRIES.GAMBIA = "Gambia"
+SP.COUNTRIES.GHANA = "Ghana"
+SP.COUNTRIES.GUINEA = "Guinea"
+SP.COUNTRIES.GUINEA-BISSAU = "Guinea-Bissau"
+SP.COUNTRIES.IVORY-COAST = "Ivory Coast"
+SP.COUNTRIES.KENYA = "Kenya"
+SP.COUNTRIES.LESOTHO = "Lesotho"
+SP.COUNTRIES.LIBERIA = "Liberia"
+SP.COUNTRIES.LIBYA = "Libya"
+SP.COUNTRIES.MADAGASCAR = "Madagascar"
+SP.COUNTRIES.MALAWI = "Malawi"
+SP.COUNTRIES.MALI = "Mali"
+SP.COUNTRIES.MAURITANIA = "Mauritania"
+SP.COUNTRIES.MAURITIUS = "Mauritius"
+SP.COUNTRIES.MOROCCO = "Morocco"
+SP.COUNTRIES.MOZAMBIQUE = "Mozambique"
+SP.COUNTRIES.NAMIBIA = "Namibia"
+SP.COUNTRIES.NIGER = "Niger"
+SP.COUNTRIES.NIGERIA = "Nigeria"
+SP.COUNTRIES.RWANDA = "Rwanda"
+SP.COUNTRIES.SAO-TOME-AND-PRINCIPE = "Sao Tome and Principe"
+SP.COUNTRIES.SENEGAL = "Senegal"
+SP.COUNTRIES.SEYCHELLES = "Seychelles"
+SP.COUNTRIES.SIERRA-LEONE = "Sierra Leone"
+SP.COUNTRIES.SOMALIA = "Somalia"
+SP.COUNTRIES.SOUTH-AFRICA = "South Africa"
+SP.COUNTRIES.SOUTH-SUDAN = "South Sudan"
+SP.COUNTRIES.SUDAN = "Sudan"
+SP.COUNTRIES.SWAZILAND = "Swaziland"
+SP.COUNTRIES.TANZANIA = "Tanzania"
+SP.COUNTRIES.TOGO = "Togo"
+SP.COUNTRIES.TUNISIA = "Tunisia"
+SP.COUNTRIES.UGANDA = "Uganda"
+SP.COUNTRIES.ZAMBIA = "Zambia"
+SP.COUNTRIES.ZIMBABWE = "Zimbabwe"
+SP.COUNTRIES.ASIA = "Asia"
+SP.COUNTRIES.AFGHANISTAN = "Afghanistan"
+SP.COUNTRIES.BAHRAIN = "Bahrain"
+SP.COUNTRIES.BANGLADESH = "Bangladesh"
+SP.COUNTRIES.BHUTAN = "Bhutan"
+SP.COUNTRIES.BRUNEI = "Brunei"
+SP.COUNTRIES.BURMA = "Burma (Myanmar)"
+SP.COUNTRIES.CAMBODIA = "Cambodia"
+SP.COUNTRIES.CHINA = "China"
+SP.COUNTRIES.EAST-TIMOR = "East Timor"
+SP.COUNTRIES.INDIA = "India"
+SP.COUNTRIES.INDONESIA = "Indonesia"
+SP.COUNTRIES.IRAN = "Iran"
+SP.COUNTRIES.IRAQ = "Iraq"
+SP.COUNTRIES.ISRAEL = "Israel"
+SP.COUNTRIES.JAPAN = "Japan"
+SP.COUNTRIES.JORDAN = "Jordan"
+SP.COUNTRIES.KAZAKHSTAN = "Kazakhstan"
+SP.COUNTRIES.KOREA-NORTH = "Korea, North"
+SP.COUNTRIES.KOREA-SOUTH = "Korea, South"
+SP.COUNTRIES.KUWAIT = "Kuwait"
+SP.COUNTRIES.KYRGYZSTAN = "Kyrgyzstan"
+SP.COUNTRIES.LAOS = "Laos"
+SP.COUNTRIES.LEBANON = "Lebanon"
+SP.COUNTRIES.MALAYSIA = "Malaysia"
+SP.COUNTRIES.MALDIVES = "Maldives"
+SP.COUNTRIES.MONGOLIA = "Mongolia"
+SP.COUNTRIES.NEPAL = "Nepal"
+SP.COUNTRIES.OMAN = "Oman"
+SP.COUNTRIES.PAKISTAN = "Pakistan"
+SP.COUNTRIES.PHILIPPINES = "Philippines"
+SP.COUNTRIES.QATAR = "Qatar"
+SP.COUNTRIES.RUSSIAN-FEDERATION = "Russian Federation"
+SP.COUNTRIES.SAUDI-ARABIA = "Saudi Arabia"
+SP.COUNTRIES.SINGAPORE = "Singapore"
+SP.COUNTRIES.SRI-LANKA = "Sri Lanka"
+SP.COUNTRIES.SYRIA = "Syria"
+SP.COUNTRIES.TAJIKISTAN = "Tajikistan"
+SP.COUNTRIES.THAILAND = "Thailand"
+SP.COUNTRIES.TURKEY = "Turkey"
+SP.COUNTRIES.TURKMENISTAN = "Turkmenistan"
+SP.COUNTRIES.UNITED-ARAB-EMIRATES = "United Arab Emirates"
+SP.COUNTRIES.UZBEKISTAN = "Uzbekistan"
+SP.COUNTRIES.VIETNAM = "Vietnam"
+SP.COUNTRIES.YEMEN = "Yemen"
+SP.COUNTRIES.EUROPE = "Europe"
+SP.COUNTRIES.ALBANIA = "Albania"
+SP.COUNTRIES.ANDORRA = "Andorra"
+SP.COUNTRIES.ARMENIA = "Armenia"
+SP.COUNTRIES.AUSTRIA = "Austria"
+SP.COUNTRIES.AZERBAIJAN = "Azerbaijan"
+SP.COUNTRIES.BELARUS = "Belarus"
+SP.COUNTRIES.BELGIUM = "Belgium"
+SP.COUNTRIES.BOSNIA-AND-HERZEGOVINA = "Bosnia and Herzegovina"
+SP.COUNTRIES.BULGARIA = "Bulgaria"
+SP.COUNTRIES.CROATIA = "Croatia"
+SP.COUNTRIES.CYPRUS = "Cyprus"
+SP.COUNTRIES.CZECH-REPUBLIC = "Czech Republic"
+SP.COUNTRIES.DENMARK = "Denmark"
+SP.COUNTRIES.ESTONIA = "Estonia"
+SP.COUNTRIES.FINLAND = "Finland"
+SP.COUNTRIES.FRANCE = "France"
+SP.COUNTRIES.GEORGIA = "Georgia"
+SP.COUNTRIES.GERMANY = "Germany"
+SP.COUNTRIES.GREECE = "Greece"
+SP.COUNTRIES.HUNGARY = "Hungary"
+SP.COUNTRIES.ICELAND = "Iceland"
+SP.COUNTRIES.IRELAND = "Ireland"
+SP.COUNTRIES.ITALY = "Italy"
+SP.COUNTRIES.LATVIA = "Latvia"
+SP.COUNTRIES.LIECHTENSTEIN = "Liechtenstein"
+SP.COUNTRIES.LITHUANIA = "Lithuania"
+SP.COUNTRIES.LUXEMBOURG = "Luxembourg"
+SP.COUNTRIES.MACEDONIA = "Macedonia"
+SP.COUNTRIES.MALTA = "Malta"
+SP.COUNTRIES.MOLDOVA = "Moldova"
+SP.COUNTRIES.MONACO = "Monaco"
+SP.COUNTRIES.MONTENEGRO = "Montenegro"
+SP.COUNTRIES.NETHERLANDS = "Netherlands"
+SP.COUNTRIES.NORWAY = "Norway"
+SP.COUNTRIES.POLAND = "Poland"
+SP.COUNTRIES.PORTUGAL = "Portugal"
+SP.COUNTRIES.ROMANIA = "Romania"
+SP.COUNTRIES.SAN-MARINO = "San Marino"
+SP.COUNTRIES.SERBIA = "Serbia"
+SP.COUNTRIES.SLOVAKIA = "Slovakia"
+SP.COUNTRIES.SLOVENIA = "Slovenia"
+SP.COUNTRIES.SPAIN = "Spain"
+SP.COUNTRIES.SWEDEN = "Sweden"
+SP.COUNTRIES.SWITZERLAND = "Switzerland"
+SP.COUNTRIES.UKRAINE = "Ukraine"
+SP.COUNTRIES.UNITED-KINGDOM = "United Kingdom"
+SP.COUNTRIES.VATICAN-CITY = "Vatican City"
+SP.COUNTRIES.NORTH-AMERICA = "North America"
+SP.COUNTRIES.ANTIGUA-AND-BARBUDA = "Antigua and Barbuda"
+SP.COUNTRIES.BAHAMAS = "Bahamas"
+SP.COUNTRIES.BARBADOS = "Barbados"
+SP.COUNTRIES.BELIZE = "Belize"
+SP.COUNTRIES.CANADA = "Canada"
+SP.COUNTRIES.COSTA-RICA = "Costa Rica"
+SP.COUNTRIES.CUBA = "Cuba"
+SP.COUNTRIES.DOMINICA = "Dominica"
+SP.COUNTRIES.DOMINICAN-REPUBLIC = "Dominican Republic"
+SP.COUNTRIES.EL-SALVADOR = "El Salvador"
+SP.COUNTRIES.GRENADA = "Grenada"
+SP.COUNTRIES.GUATEMALA = "Guatemala"
+SP.COUNTRIES.HAITI = "Haiti"
+SP.COUNTRIES.HONDURAS = "Honduras"
+SP.COUNTRIES.JAMAICA = "Jamaica"
+SP.COUNTRIES.MEXICO = "Mexico"
+SP.COUNTRIES.NICARAGUA = "Nicaragua"
+SP.COUNTRIES.PANAMA = "Panama"
+SP.COUNTRIES.SAINT-KITTS-AND-NEVIS = "Saint Kitts and Nevis"
+SP.COUNTRIES.SAINT-LUCIA = "Saint Lucia"
+SP.COUNTRIES.SAINT-VINCENT-AND-THE-GRENADINES = "Saint Vincent and the Grenadines"
+SP.COUNTRIES.TRINIDAD-AND-TOBAGO = "Trinidad and Tobago"
+SP.COUNTRIES.UNITED-STATES = "United States"
+SP.COUNTRIES.OCEANIA = "Oceania"
+SP.COUNTRIES.AUSTRALIA = "Australia"
+SP.COUNTRIES.FIJI = "Fiji"
+SP.COUNTRIES.KIRIBATI = "Kiribati"
+SP.COUNTRIES.MARSHALL-ISLANDS = "Marshall Islands"
+SP.COUNTRIES.MICRONESIA = "Micronesia"
+SP.COUNTRIES.NAURU = "Nauru"
+SP.COUNTRIES.NEW-ZEALAND = "New Zealand"
+SP.COUNTRIES.PALAU = "Palau"
+SP.COUNTRIES.PAPUA-NEW-GUINEA = "Papua New Guinea"
+SP.COUNTRIES.SAMOA = "Samoa"
+SP.COUNTRIES.SOLOMON-ISLANDS = "Solomon Islands"
+SP.COUNTRIES.TONGA = "Tonga"
+SP.COUNTRIES.TUVALU = "Tuvalu"
+SP.COUNTRIES.VANUATU = "Vanuatu"
+SP.COUNTRIES.SOUTH-AMERICA = "South America"
+SP.COUNTRIES.ARGENTINA = "Argentina"
+SP.COUNTRIES.BOLIVIA = "Bolivia"
+SP.COUNTRIES.BRAZIL = "Brazil"
+SP.COUNTRIES.CHILE = "Chile"
+SP.COUNTRIES.COLOMBIA = "Colombia"
+SP.COUNTRIES.ECUADOR = "Ecuador"
+SP.COUNTRIES.GUYANA = "Guyana"
+SP.COUNTRIES.PARAGUAY = "Paraguay"
+SP.COUNTRIES.PERU = "Peru"
+SP.COUNTRIES.SURINAME = "Suriname"
+SP.COUNTRIES.URUGUAY = "Uruguay"
+SP.COUNTRIES.VENEZUELA = "Venezuela"
