--- a/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -1,4 +1,3 @@
-
 ; @package: SobiPro Component for Joomla!
 
 ; @author
@@ -6,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,19 +14,19 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields!"
-SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
-SP.JS_RED_HIGHLIGHTED_FIELD="Highlighted field"
-SP.JS_CONNECTION_TIMED_OUT="Connection timed out."
-SP.JS_DONE="Done"
-SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST="Please select the category you want to add from the category tree first."
-SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED="This category has already been added."
-SP.JS_SELECT_CATEGORIES="Select categories"
-SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field."
-SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories."
-SP.JS_ATTENTION="Attention!"
-SP.JS_CONFIRM_DELETE_ENTRY="Are you sure you want to delete this entry?"
-SP.JS_CONFIRM_URL_COUNT_RESET="Are you sure you want to reset the counter?"
-SP.JS_SELECT_CAT_WITH_NO_CHILDS="You cannot add an entry to a parent category. Please select a category which has no subcategories."
+SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS = "Please fill in all required fields!"
+SP.JS_ADD_ENTRY_FIELD_REQUIRED = "$field is required. Please fill in all required fields."
+SP.JS_RED_HIGHLIGHTED_FIELD = "Highlighted field"
+SP.JS_CONNECTION_TIMED_OUT = "Connection timed out."
+SP.JS_DONE = "Done"
+SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST = "Please select the category you want to add from the category tree first."
+SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED = "This category has already been added."
+SP.JS_SELECT_CATEGORIES = "Select categories"
+SP.JS_FD_TEXTAREA_LIMIT = "You can input a maximum of var:[max_length] chars into this field."
+SP.JS_FCC_LIMIT_REACHED = "You can add an entry maximal up to %d categories."
+SP.JS_ATTENTION = "Attention!"
+SP.JS_CONFIRM_DELETE_ENTRY = "Are you sure you want to delete this entry?"
+SP.JS_CONFIRM_URL_COUNT_RESET = "Are you sure you want to reset the counter?"
+SP.JS_SELECT_CAT_WITH_NO_CHILDS = "You cannot add an entry to a parent category. Please select a category which has no subcategories."
