--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -5,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,137 +14,137 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.TP.CONFIG.DESIGN="Design"
-SP.TP.CONFIG.DESIGN_STANDARD="Standard"
-SP.TP.CONFIG.DESIGN_ELEVATED="Elevated"
+SP.TP.CONFIG.DESIGN = "Design"
+SP.TP.CONFIG.DESIGN_STANDARD = "Standard"
+SP.TP.CONFIG.DESIGN_ELEVATED = "Elevated"
 
-SP.TP.CONFIG.DOCUMENTATION="You will find information on how to use these settings in the <a class="alert-link" href="https://www.sigsiu.net/default-template-settings">documentation</a>. Support is available for members in our <a class="alert-link" href="https://www.sigsiu.net/support">support area</a>."
-SP.TP.DEFAULT="default"
-SP.TP.SETTINGS_GENERAL="General Settings"
-SP.TP.CONFIG.CSS="Template Style"
-SP.TP.CONFIG.CSS_COLOUR="Colour theme"
-SP.TP.CONFIG.CSS_EDGE="Edge design"
-SP.TP.CONFIG.TOPMENU="Top Menu"
-SP.TP.CONFIG.TOPMENU_STANDARD="Standard Top Menu"
-SP.TP.CONFIG.TOPMENU_BAR="Link Bar"
-SP.TP.CONFIG.TOPMENU_BUTTON="Button Bar"
-SP.TP.CONFIG.TOPMENU_BUTTON_POS="Float search/add buttons"
-SP.TP.CONFIG.LEFT="left"
-SP.TP.CONFIG.RIGHT="right"
-SP.TP.CONFIG.FONTS="Fonts"
-SP.TP.CONFIG.FONTSIZE="Base font size"
-SP.TP.CONFIG.FONT="Base font"
-SP.TP.CONFIG.SPECIALFONT="Font for Headings"
-SP.TP.CONFIG.FEONTSELECTION="None (Joomla! template default)"
-SP.TP.SETTINGS_PRINT="Printing"
-SP.TP.CONFIG.SHOWPRT="Show print button"
-SP.TP.CONFIG.GALLERY="Gallery image size"
-SP.TP.CONFIG.PRINTIMG="Print Images"
+SP.TP.CONFIG.DOCUMENTATION = "You will find information on how to use these settings in the <a class="alert-link" href="https://www.sigsiu.net/default-template-settings">documentation</a>. Support is available for members in our <a class="alert-link" href="https://www.sigsiu.net/support">support area</a>."
+SP.TP.DEFAULT = "default"
+SP.TP.SETTINGS_GENERAL = "General Settings"
+SP.TP.CONFIG.CSS = "Template Style"
+SP.TP.CONFIG.CSS_COLOUR = "Colour theme"
+SP.TP.CONFIG.CSS_EDGE = "Edge design"
+SP.TP.CONFIG.TOPMENU = "Top Menu"
+SP.TP.CONFIG.TOPMENU_STANDARD = "Standard Top Menu"
+SP.TP.CONFIG.TOPMENU_BAR = "Link Bar"
+SP.TP.CONFIG.TOPMENU_BUTTON = "Button Bar"
+SP.TP.CONFIG.TOPMENU_BUTTON_POS = "Float search/add buttons"
+SP.TP.CONFIG.LEFT = "left"
+SP.TP.CONFIG.RIGHT = "right"
+SP.TP.CONFIG.FONTS = "Fonts"
+SP.TP.CONFIG.FONTSIZE = "Base font size"
+SP.TP.CONFIG.FONT = "Base font"
+SP.TP.CONFIG.SPECIALFONT = "Font for Headings"
+SP.TP.CONFIG.FEONTSELECTION = "None (Joomla! template default)"
+SP.TP.SETTINGS_PRINT = "Printing"
+SP.TP.CONFIG.SHOWPRT = "Show print button"
+SP.TP.CONFIG.GALLERY = "Gallery image size"
+SP.TP.CONFIG.PRINTIMG = "Print Images"
 
-SP.TP.CONFIG.CUSTOM="Custom colours"
-SP.TP.CONFIG.CUSTOM_BASE="Base colour"
-SP.TP.CONFIG.CUSTOM_BTEXT="Basetext colour"
-SP.TP.CONFIG.CUSTOM_ATEXT="Activetext colour"
-SP.TP.CONFIG.CUSTOM_ACTIVE="Active colour"
-SP.TP.CONFIG.CUSTOM_LINK="Link colour"
-SP.TP.CONFIG.CUSTOM_ALERT="Alert colour"
-SP.TP.CONFIG.CUSTOM_IMPORTANT="Important colour"
-SP.TP.CONFIG.CUSTOM_LIGHTB="Light background colour"
-SP.TP.CONFIG.CUSTOM_MEDIUMB="Medium background colour"
-SP.TP.CONFIG.CUSTOM_DARKB="Dark background colour"
+SP.TP.CONFIG.CUSTOM = "Custom colours"
+SP.TP.CONFIG.CUSTOM_BASE = "Base colour"
+SP.TP.CONFIG.CUSTOM_BTEXT = "Basetext colour"
+SP.TP.CONFIG.CUSTOM_ATEXT = "Activetext colour"
+SP.TP.CONFIG.CUSTOM_ACTIVE = "Active colour"
+SP.TP.CONFIG.CUSTOM_LINK = "Link colour"
+SP.TP.CONFIG.CUSTOM_ALERT = "Alert colour"
+SP.TP.CONFIG.CUSTOM_IMPORTANT = "Important colour"
+SP.TP.CONFIG.CUSTOM_LIGHTB = "Light background colour"
+SP.TP.CONFIG.CUSTOM_MEDIUMB = "Medium background colour"
+SP.TP.CONFIG.CUSTOM_DARKB = "Dark background colour"
 
-SP.TP.CONFIG.CUSTOM_BACK="Main background colour"
-SP.TP.CONFIG.CUSTOM_FONT="Font colour"
+SP.TP.CONFIG.CUSTOM_BACK = "Main background colour"
+SP.TP.CONFIG.CUSTOM_FONT = "Font colour"
 
-SP.TP.CONFIG.RSS="RSS Feeds"
-SP.TP.CONFIG.RSS_SHOWFEEDS="Show feeds from"
-SP.TP.CONFIG.RSS_ENTRIES="entries"
-SP.TP.CONFIG.RSS_CATEGORIES="categories"
-SP.TP.CONFIG.RSS_BOTH="both"
-SP.TP.CONFIG.RSSENTRIES="Settings for entries shown in the feeds:"
-SP.TP.CONFIG.RSSCATS="Settings for categories shown in the feeds:"
-SP.TP.CONFIG.RSS_CATSLIMIT="No of categories"
-SP.TP.CONFIG.RSS_ENTRIESLIMIT="No of entries"
-SP.TP.CONFIG.RSS_INFO="These settings are valid only for the RSS template 'feeds/rss.xsl' If you rename it or add another one, you need to create the necessary JSON file manually."
+SP.TP.CONFIG.RSS = "RSS Feeds"
+SP.TP.CONFIG.RSS_SHOWFEEDS = "Show feeds from"
+SP.TP.CONFIG.RSS_ENTRIES = "entries"
+SP.TP.CONFIG.RSS_CATEGORIES = "categories"
+SP.TP.CONFIG.RSS_BOTH = "both"
+SP.TP.CONFIG.RSSENTRIES = "Settings for entries shown in the feeds:"
+SP.TP.CONFIG.RSSCATS = "Settings for categories shown in the feeds:"
+SP.TP.CONFIG.RSS_CATSLIMIT = "No of categories"
+SP.TP.CONFIG.RSS_ENTRIESLIMIT = "No of entries"
+SP.TP.CONFIG.RSS_INFO = "These settings are valid only for the RSS template 'feeds/rss.xsl' If you rename it or add another one, you need to create the necessary JSON file manually."
 
-SP.TP.SETTINGS_ENTRY="Entry Form Settings"
-SP.TP.CONFIG.ENTRY_CSS_CLASS="Entry form class"
-SP.TP.CONFIG.ENTRY_CSS_CLASS_INLINE="inline"
-SP.TP.CONFIG.ENTRY_CSS_CLASS_HORIZONTAL="horizontal"
-SP.TP.CONFIG.ENTRY_STAR="Add 'required' star"
-SP.TP.CONFIG.ENTRY_HELPPOSITION="Description position"
-SP.TP.CONFIG.ENTRY_HELPPOSITION_POPUP="popup"
-SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE="above"
-SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW="below"
-SP.TP.CONFIG.ENTRY_HELPPOSITION_RIGHT="on the right side"
-SP.TP.CONFIG.ENTRY_REDIRECTLOGIN="Redirect to login page"
+SP.TP.SETTINGS_ENTRY = "Entry Form Settings"
+SP.TP.CONFIG.ENTRY_CSS_CLASS = "Entry form class"
+SP.TP.CONFIG.ENTRY_CSS_CLASS_INLINE = "inline"
+SP.TP.CONFIG.ENTRY_CSS_CLASS_HORIZONTAL = "horizontal"
+SP.TP.CONFIG.ENTRY_STAR = "Add 'required' star"
+SP.TP.CONFIG.ENTRY_HELPPOSITION = "Description position"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_POPUP = "popup"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE = "above"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW = "below"
+SP.TP.CONFIG.ENTRY_HELPPOSITION_RIGHT = "on the right side"
+SP.TP.CONFIG.ENTRY_REDIRECTLOGIN = "Redirect to login page"
 
-SP.TP.SETTINGS_SEARCH="Search Form Settings"
-SP.TP.SETTINGS_SEARCHGENERAL="General Settings"
-SP.TP.CONFIG.EXTENDEDSEARCH="Extended search button"
-SP.TP.CONFIG.HIDESEARCH="Hide search parameters"
+SP.TP.SETTINGS_SEARCH = "Search Form Settings"
+SP.TP.SETTINGS_SEARCHGENERAL = "General Settings"
+SP.TP.CONFIG.EXTENDEDSEARCH = "Extended search button"
+SP.TP.CONFIG.HIDESEARCH = "Hide search parameters"
 
-SP.TP.SETTINGS_ENTRIES="Entries Settings"
-SP.TP.SETTINGS_FEATURES="General Features"
-SP.TP.CONFIG.ENTRIES_NOIMG="Show 'no image' placeholder"
-SP.TP.CONFIG.ENTRIES_FACCOL="Facilities colour"
-SP.TP.CONFIG.ENTRIES_IMGRATIO="Placeholder ratio"
-SP.TP.CONFIG.ENTRIES_PLACEHOLDER="Show placeholder image"
-SP.TP.CONFIG.ENTRIES_W-L="White on Light-grey"
-SP.TP.CONFIG.ENTRIES_W-D="White on Dark-grey"
-SP.TP.CONFIG.ENTRIES_L-D="Light-grey on Dark-grey"
-SP.TP.CONFIG.ENTRIES_L-W="Light-grey on White"
-SP.TP.CONFIG.ENTRIES_D-L="Dark-grey on Light-grey"
-SP.TP.CONFIG.ENTRIES_D-W="Dark-grey on White"
-SP.TP.SETTINGS_VCARD="vCard"
-SP.TP.CONFIG.TEXTLENGTH="Shorten text to"
-SP.TP.CONFIG.ENTRIES_IMGSIZESMALL="Image width"
-SP.TP.SETTINGS_DETAILS="Details View"
-SP.TP.CONFIG.TABSTYLE="Tab style"
-SP.TP.CONFIG.CAROUSEL="Carousel"
-SP.TP.CONFIG.CAROUSELIMG="Carousel image height"
-SP.TP.CONFIG.CAROUSELIMGWIDTH="Width"
-SP.TP.CONFIG.CAROUSELSOURCE="Image source"
-SP.TP.CONFIG.CAROUSELSRCFOLDER="from folder"
-SP.TP.CONFIG.CAROUSELSRCGALLERY="from gallery"
-SP.TP.CONFIG.CAROUSELPATH="Path to images"
-SP.TP.CONFIG.CAROUSELEFFECT="Effect"
-SP.TP.CONFIG.CAROUSELEFNONE="none"
-SP.TP.CONFIG.CAROUSELEFSLIDE="slide"
-SP.TP.CONFIG.CAROUSELEFFADE="fade"
+SP.TP.SETTINGS_ENTRIES = "Entries Settings"
+SP.TP.SETTINGS_FEATURES = "General Features"
+SP.TP.CONFIG.ENTRIES_NOIMG = "Show 'no image' placeholder"
+SP.TP.CONFIG.ENTRIES_FACCOL = "Facilities colour"
+SP.TP.CONFIG.ENTRIES_IMGRATIO = "Placeholder ratio"
+SP.TP.CONFIG.ENTRIES_PLACEHOLDER = "Show placeholder image"
+SP.TP.CONFIG.ENTRIES_W-L = "White on Light-grey"
+SP.TP.CONFIG.ENTRIES_W-D = "White on Dark-grey"
+SP.TP.CONFIG.ENTRIES_L-D = "Light-grey on Dark-grey"
+SP.TP.CONFIG.ENTRIES_L-W = "Light-grey on White"
+SP.TP.CONFIG.ENTRIES_D-L = "Dark-grey on Light-grey"
+SP.TP.CONFIG.ENTRIES_D-W = "Dark-grey on White"
+SP.TP.SETTINGS_VCARD = "vCard"
+SP.TP.CONFIG.TEXTLENGTH = "Shorten text to"
+SP.TP.CONFIG.ENTRIES_IMGSIZESMALL = "Image width"
+SP.TP.SETTINGS_DETAILS = "Details View"
+SP.TP.CONFIG.TABSTYLE = "Tab style"
+SP.TP.CONFIG.CAROUSEL = "Carousel"
+SP.TP.CONFIG.CAROUSELIMG = "Carousel image height"
+SP.TP.CONFIG.CAROUSELIMGWIDTH = "Width"
+SP.TP.CONFIG.CAROUSELSOURCE = "Image source"
+SP.TP.CONFIG.CAROUSELSRCFOLDER = "from folder"
+SP.TP.CONFIG.CAROUSELSRCGALLERY = "from gallery"
+SP.TP.CONFIG.CAROUSELPATH = "Path to images"
+SP.TP.CONFIG.CAROUSELEFFECT = "Effect"
+SP.TP.CONFIG.CAROUSELEFNONE = "none"
+SP.TP.CONFIG.CAROUSELEFSLIDE = "slide"
+SP.TP.CONFIG.CAROUSELEFFADE = "fade"
 
-SP.TP.SETTINGS_VIEW="View Settings"
-SP.TP.SETTINGS_VIEWFEATURE="View Features"
-SP.TP.CONFIG.HIDECATEGORIES="Categories"
-SP.TP.CONFIG.LST_COUNT="Count entries"
-SP.TP.CONFIG.SHOWICON="Show icon next to name"
-SP.TP.CONFIG.SECTION="Section View"
-SP.TP.CONFIG.CAT="Category View"
-SP.TP.CONFIG.LIST="Listing View"
-SP.TP.CONFIG.LST_ENTRIESINLINE="Entries per line"
-SP.TP.CONFIG.LST_ENTRIESLIMIT="Entries per page"
-SP.TP.CONFIG.LST_RECURSIVE="Entries recursive"
-SP.TP.CONFIG.LST_ORDERING="Entries ordering"
-SP.TP.CONFIG.CAT_INLINE="Categories per line"
-SP.TP.CONFIG.CAT_ORDERING="Categories ordering"
-SP.TP.CONFIG.PAGINATION="Pagination"
-SP.TP.CONFIG.PAG_AJAX="Ajax"
-SP.TP.CONFIG.PAG_STD="Standard"
-SP.TP.CONFIG.SHOW_NONE="None"
-SP.TP.CONFIG.FIELDSPOS="Fields Position"
-SP.TP.CONFIG.FIELDSPOS_ABOVE="Above subcategories and entries"
-SP.TP.CONFIG.FIELDSPOS_BETWEEN="Between subcategories and entries"
-SP.TP.CONFIG.FIELDSPOS_BELOW="Below subcategories and entries"
+SP.TP.SETTINGS_VIEW = "View Settings"
+SP.TP.SETTINGS_VIEWFEATURE = "View Features"
+SP.TP.CONFIG.HIDECATEGORIES = "Categories"
+SP.TP.CONFIG.LST_COUNT = "Count entries"
+SP.TP.CONFIG.SHOWICON = "Show icon next to name"
+SP.TP.CONFIG.SECTION = "Section View"
+SP.TP.CONFIG.CAT = "Category View"
+SP.TP.CONFIG.LIST = "Listing View"
+SP.TP.CONFIG.LST_ENTRIESINLINE = "Entries per line"
+SP.TP.CONFIG.LST_ENTRIESLIMIT = "Entries per page"
+SP.TP.CONFIG.LST_RECURSIVE = "Entries recursive"
+SP.TP.CONFIG.LST_ORDERING = "Entries ordering"
+SP.TP.CONFIG.CAT_INLINE = "Categories per line"
+SP.TP.CONFIG.CAT_ORDERING = "Categories ordering"
+SP.TP.CONFIG.PAGINATION = "Pagination"
+SP.TP.CONFIG.PAG_AJAX = "Ajax"
+SP.TP.CONFIG.PAG_STD = "Standard"
+SP.TP.CONFIG.SHOW_NONE = "None"
+SP.TP.CONFIG.FIELDSPOS = "Fields Position"
+SP.TP.CONFIG.FIELDSPOS_ABOVE = "Above subcategories and entries"
+SP.TP.CONFIG.FIELDSPOS_BETWEEN = "Between subcategories and entries"
+SP.TP.CONFIG.FIELDSPOS_BELOW = "Below subcategories and entries"
 
-SP.TP.SETTINGS_APPS="Applications"
-SP.TP.CONFIG.APPRAR="Review & Rating Application"
-SP.TP.CONFIG.APPRAR_STAR="Star colour"
-SP.TP.CONFIG.APPCOL="Collection Application"
-SP.TP.CONFIG.APPCOL_NO="Entries per page"
-SP.TP.CONFIG.APPPROFILE="Profile Field"
-SP.TP.CONFIG.APPPROFILE_DV="Entries per line in details view"
-SP.TP.CONFIG.APPEMOD="Entries Module"
-SP.TP.CONFIG.APPEMOD_EIL="Entries in line"
+SP.TP.SETTINGS_APPS = "Applications"
+SP.TP.CONFIG.APPRAR = "Review & Rating Application"
+SP.TP.CONFIG.APPRAR_STAR = "Star colour"
+SP.TP.CONFIG.APPCOL = "Collection Application"
+SP.TP.CONFIG.APPCOL_NO = "Entries per page"
+SP.TP.CONFIG.APPPROFILE = "Profile Field"
+SP.TP.CONFIG.APPPROFILE_DV = "Entries per line in details view"
+SP.TP.CONFIG.APPEMOD = "Entries Module"
+SP.TP.CONFIG.APPEMOD_EIL = "Entries in line"
 
