--- a/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.js.ini
@@ -5,7 +5,7 @@
 ; Email: sobi[at]sigsiu.net
 ; Url: https://www.Sigsiu.NET
 
-; @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+; @copyright Copyright (C) 2006 - 2018 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 ; @license GNU/GPL Version 3
 ; This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 ; as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,42 +14,42 @@
 ; This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 ; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
 
-; Translations are made by our translation teams. See https://www.sigsiu.net/center/languages.
+; Translations are made by our translation teams. Read more at https://www.sigsiu.net/center/languages.
 
-SP.JS_ENTRY_REJECT_TEMPLATE_NAME_PROMPT="Choose a name for the template"
-SP.JS_ENTRY_REJECT_TEMPLATE_DELETE="Are you sure you want to delete the selected template?"
+SP.JS_ENTRY_REJECT_TEMPLATE_NAME_PROMPT = "Choose a name for the template"
+SP.JS_ENTRY_REJECT_TEMPLATE_DELETE = "Are you sure you want to delete the selected template?"
 
-SP.JS_STORE_DEFAULT_ORDERING="Do you want to store current ordering as default?"
+SP.JS_STORE_DEFAULT_ORDERING = "Do you want to store current ordering as default?"
 
 ;SP.JS_SELECT_CATEGORY="Select category"
-SP.JS_PLEASE_SELECT_SECTION_FIRST="Please select a section first."
-SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION="You must at least select a section."
-SP.JS_PROGRESS_WORKING="Working ..."
-SP.JS_PROGRESS_DONE_REDIRECTING="All done. Please wait - refreshing page..."
-SP.JS_ACL_NONREG_ADM_WARN="Are you sure that you want to give administrative permissions to an un-registered user?"
-SP.JS_SAVE_AS_TEMPL_FILE="Name of the new file"
-SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS="Please fill in all required fields!"
-SP.JS_CLONE_TEMPL="Please enter a new name for the new template."
-SP.JS_ADD_ENTRY_FIELD_REQUIRED="$field is required. Please fill in all required fields."
-SP.JS_RED_HIGHLIGHTED_FIELD="Highlighted field"
-SP.JS_CONNECTION_TIMED_OUT="Connection timed out."
-SP.JS_DONE="Done!"
-SP.JS_REQUIREMENT_ERR="Your server does not meet the minimum requirements to run SobiPro.{newline}Please close this window and read through the system check report (scroll down to see the whole list). You will find a detailed requirements list on our site."
-SP.JS_REQUIREMENT_WARN="It seems that your server covers the minimum requirements to run SobiPro.{newline}However there were some warnings. Please read the system check report carefully before you proceed."
-SP.JS_REQUIREMENT_WORKING_MSG="Wait please ... %d processes are still running"
-SP.JS_REQUIREMENT_READ_PLEASE="Wow. You read the whole list in about %d seconds!!{newline}Are you sure you don't want to read it again?!"
-SP.JS_TOO_LONG_ANSWER_LIMIT_EXPIRED_SKIPPING="Answer too long. Limit expired. Skipping."
-SP.JS_ARE_YOU_SURE_YOU_WANT_TO_DELETE_THIS_GROUP_ALL_VALUES_WITHIN_THIS_GROUP_WILL_BE_DELETED_TOO="Are you sure you want to delete this group? All values within this group will be deleted too!"
-SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST="Please select the category you want to add from the category tree first"
-SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED="This category has already been added."
-SP.JS_SELECT_CATEGORIES="Select categories"
-SP.JS_PLEASE_ENTER_NEW_NAME_FOR_THE_TEMPLATE="Please enter a new name for the new template"
-SP.JS_SELECT_PARENT_CATEGORY="Select Parent Category"
-SP.JS_GRP_DEL_WARN="Are you sure you want to delete this group? All values within this group will be deleted too!"
-SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into this field."
-SP.JS_EDIT_FILTER="Edit Filter"
-SP.JS_DELETE_FILTER="Delete"
-SP.JS_PBY_NO="Please don't forget to donate! :)"
-SP.JS_CHECKING_FOR_UPDATES="Please wait, checking for updates ..."
-SP.JS_NO_REPO="Please add the URL of a repository first."
-SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories."
+SP.JS_PLEASE_SELECT_SECTION_FIRST = "Please select a section first."
+SP.JS_YOU_HAVE_TO_AT_LEAST_SELECT_A_SECTION = "You must at least select a section."
+SP.JS_PROGRESS_WORKING = "Working ..."
+SP.JS_PROGRESS_DONE_REDIRECTING = "All done. Please wait - refreshing page..."
+SP.JS_ACL_NONREG_ADM_WARN = "Are you sure that you want to give administrative permissions to an un-registered user?"
+SP.JS_SAVE_AS_TEMPL_FILE = "Name of the new file"
+SP.JS_PLEASE_FILL_IN_ALL_REQUIRED_FIELDS = "Please fill in all required fields!"
+SP.JS_CLONE_TEMPL = "Please enter a new name for the new template."
+SP.JS_ADD_ENTRY_FIELD_REQUIRED = "$field is required. Please fill in all required fields."
+SP.JS_RED_HIGHLIGHTED_FIELD = "Highlighted field"
+SP.JS_CONNECTION_TIMED_OUT = "Connection timed out."
+SP.JS_DONE = "Done!"
+SP.JS_REQUIREMENT_ERR = "Your server does not meet the minimum requirements to run SobiPro.{newline}Please close this window and read through the system check report (scroll down to see the whole list). You will find a detailed requirements list on our site."
+SP.JS_REQUIREMENT_WARN = "It seems that your server covers the minimum requirements to run SobiPro.{newline}However there were some warnings. Please read the system check report carefully before you proceed."
+SP.JS_REQUIREMENT_WORKING_MSG = "Wait please ... %d processes are still running"
+SP.JS_REQUIREMENT_READ_PLEASE = "Wow. You read the whole list in about %d seconds!!{newline}Are you sure you don't want to read it again?!"
+SP.JS_TOO_LONG_ANSWER_LIMIT_EXPIRED_SKIPPING = "Answer too long. Limit expired. Skipping."
+SP.JS_ARE_YOU_SURE_YOU_WANT_TO_DELETE_THIS_GROUP_ALL_VALUES_WITHIN_THIS_GROUP_WILL_BE_DELETED_TOO = "Are you sure you want to delete this group? All values within this group will be deleted too!"
+SP.JS_PLEASE_SELECT_CATEGORY_YOU_WANT_TO_ADD_IN_THE_TREE_FIRST = "Please select the category you want to add from the category tree first"
+SP.JS_THIS_CATEGORY_HAS_BEEN_ALREADY_ADDED = "This category has already been added."
+SP.JS_SELECT_CATEGORIES = "Select categories"
+SP.JS_PLEASE_ENTER_NEW_NAME_FOR_THE_TEMPLATE = "Please enter a new name for the new template"
+SP.JS_SELECT_PARENT_CATEGORY = "Select Parent Category"
+SP.JS_GRP_DEL_WARN = "Are you sure you want to delete this group? All values within this group will be deleted too!"
+SP.JS_FD_TEXTAREA_LIMIT = "You can input a maximum of var:[max_length] chars into this field."
+SP.JS_EDIT_FILTER = "Edit Filter"
+SP.JS_DELETE_FILTER = "Delete"
+SP.JS_PBY_NO = "Please don't forget to donate! :)"
+SP.JS_CHECKING_FOR_UPDATES = "Please wait, checking for updates ..."
+SP.JS_NO_REPO = "Please add the URL of a repository first."
+SP.JS_FCC_LIMIT_REACHED = "You can add an entry maximal up to %d categories."
